--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,11 @@
             <artifactId>controlsfx</artifactId>
             <version>11.0.3</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.googlecode.json-simple</groupId>
+            <artifactId>json-simple</artifactId>
+            <version>1.1.1</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
