--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,7 +1,7 @@
 # This workflow will build a Java project with Maven, and cache/restore any dependencies to improve the workflow execution time
 # For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-maven
 
-name: Java CI with Maven
+name: JavaFX CI with Maven
 
 on:
   push:
@@ -14,12 +14,14 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    # Checkout the repo to allow access for the workflow
     - uses: actions/checkout@v3
+    # Set up JDK 15
     - name: Set up JDK 15
       uses: actions/setup-java@v3
       with:
         java-version: '15'
         distribution: 'corretto'
         cache: maven
-    - name: Build with Maven
-      run: mvn -B package --file pom.xml
+    - name: Build with Maven using jlink
+      run: mvn clean javafx:jlink
