--- a/pom.xml
+++ b/pom.xml
@@ -7,16 +7,17 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-controls</artifactId>
-            <version>18.0.1</version>
+            <version>20-ea+11</version>
         </dependency>
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-fxml</artifactId>
-            <version>18.0.1</version>
+            <version>20-ea+11</version>
         </dependency>
         <!-- https://mvnrepository.com/artifact/org.controlsfx/controlsfx -->
         <dependency>
@@ -27,7 +28,7 @@
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
-            <version>2.8.6</version>
+            <version>2.10</version>
         </dependency>
     </dependencies>
     <build>
@@ -43,8 +44,8 @@
                         <arg>--add-exports</arg>
                         <arg>javafx.base/com.sun.javafx.event=org.controlsfx.controls</arg>
                     </compilerArgs>
-                    <source>15</source>
-                    <target>15</target>
+                    <source>18</source>
+                    <target>18</target>
                 </configuration>
             </plugin>
             <plugin>
