--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -7,6 +7,8 @@ on:
   push:
   pull_request:
     branches: [ "master" ]
+    types:
+     - closed
 
 jobs:
   build-and-test:
@@ -26,3 +28,23 @@ jobs:
     - name: Compile and Test
     # compiles and run the test pluggins defined in the POM
       run: mvn clean compile test
+  
+  package-mac:
+    if: github.event.pull_request.merged == true
+    runs-on: macos-latest
+    
+    steps:
+    # Checkout the repo to allow access for the workflow
+    - uses: actions/checkout@v3
+    # Set up JDK 17
+    - name: Set up JDK 17
+      uses: actions/setup-java@v3
+      with:
+        java-version: '17'
+        distribution: 'corretto'
+        cache: maven 
+    - name: Package app as dmg
+      run: |
+        sh package.sh "icons/icon.icns"
+        ls
+    
