--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -9,6 +9,10 @@ on:
     branches: [ "master" ]
     types:
      - closed
+     
+# Dummy version to prevent pom.xml to make the build crash
+env:
+  VERSION: "TEST"
 
 jobs:
   build-and-test:
