--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,8 +5,52 @@ on:
     types: ['released']
 
 jobs:
+  # Package mac is working but the DMG is corrupted when produced by CI. Not locally
+
+#  package-mac:
+#    runs-on: macos-latest
+#
+#    env:
+#      # We retrieve the release tag created with the env variable
+#      VERSION: ${{ github.ref_name }}
+#
+#    steps:
+#      # Checkout the repo to allow access for the workflow
+#      - uses: actions/checkout@v3
+#      # Set up JDK 17
+#      - name: Set up JDK 17
+#        uses: actions/setup-java@v3
+#        with:
+#          java-version: '17'
+#          distribution: 'corretto'
+#          cache: maven
+#        # Build the jar that will be used by jpackage
+#      - name: Update Module Version
+#        # Use the versions-maven-plugin to set the module version using GitHub variables
+#        run: |
+#          echo ${{ env.VERSION }}
+#          mvn versions:set -DnewVersion=${{ env.VERSION }}
+#      - name: Build jar
+#        run: mvn clean install
+#      # Build the JRE used by jpackage
+#      - name: Build JRE image
+#        run: mvn javafx:jlink
+#      # Package the app using the icon path given as a parameter
+#      - name: Package app as dmg
+#        # Run script with arguments for the icon to use and the version number from GitHub environment variables
+#        run: sh CI-tools/package.sh "icons/icon.icns" ${{ env.VERSION }}
+#        # Revert the module version for cleanness
+#      - name: Revert module version
+#        run: mvn versions:revert
+#        # Save the .dmg created as release asset
+#      - name: Release Package
+#        uses: djn24/add-asset-to-release@v1
+#        with:
+#          token: ${{secrets.GITHUB_TOKEN}}
+#          path: './Synchro Calculator-${{ env.VERSION }}.dmg'
+
   package-mac:
-    runs-on: macos-latest
+    runs-on: windows-latest
 
     env:
       # We retrieve the release tag created with the env variable
@@ -36,7 +80,7 @@ jobs:
       # Package the app using the icon path given as a parameter
       - name: Package app as dmg
         # Run script with arguments for the icon to use and the version number from GitHub environment variables
-        run: sh CI-tools/package.sh "icons/icon.icns" ${{ env.VERSION }}
+        run: sh CI-tools/package.sh "icons/icon.ico" ${{ env.VERSION }}
         # Revert the module version for cleanness
       - name: Revert module version
         run: mvn versions:revert
@@ -45,4 +89,4 @@ jobs:
         uses: djn24/add-asset-to-release@v1
         with:
           token: ${{secrets.GITHUB_TOKEN}}
-          path: './Synchro Calculator-${{ env.VERSION }}.dmg'
+          path: './Synchro Calculator-${{ env.VERSION }}.exe'
